adding module to surefire args