@@ -124,7 +124,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <argLine>-Xmx16g</argLine>
+          <argLine>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED -Xmx16g</argLine>
         </configuration>
       </plugin>
     </plugins>
